test-resources/testData/graphql/frameworks/federation/validation/QueryValidation.graphql
type Query {
    users(name: String): [ID!]!
}

query Query {
    users(<error descr="Argument 'name' is not a valid 'String' - Expected type 'String' but was 'Int'.">name</error>: 123)
}
